cmake_minimum_required(VERSION 3.10)
project(Smokeview_fortw LANGUAGES Fortran)
add_library(smv_fortw SHARED fdsmodules.f90 gsmv.f90 getdata.f90)

if (UNIX)
    target_compile_definitions(smv_fortw PRIVATE pp_LINUX)
endif ()
target_compile_definitions(smv_fortw PRIVATE pp_FSEEK)
# set(CMAKE_Fortran_PREPROCESS ON FORCE)
# set(Fortran_PREPROCESS ON FORCE)
# set(CMAKE_Fortran_CREATE_PREPROCESSED_SOURCE "<CMAKE_Fortran_COMPILER> -cpp <DEFINES> <FLAGS> -E <SOURCE> -o <PREPROCESSED_SOURCE>" FORCE)
# set(CMAKE_Fortran_COMPILE_OBJECT "<CMAKE_Fortran_COMPILER> -fpreprocessed <FLAGS> -c <SOURCE> -o <OBJECT>")
set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-libgfortran -static")
